# pdf2epub

./: .gitignore  AGENTS.md  README.md  START_HERE.md  pyproject.toml
demo/: DataScienceBookV3.report.json  MEDDICC_Einfuehrung_und_Praxisleitfaden_erweitert.report.json
docs/: benchmark.md  codex-prompts.md  quality-report.md  roadmap.md
docs/architecture/: document-ir.md  pipeline.md
docs/decisions/: 0001-repository-name.md  0002-local-first.md
src/pdf2epub_recovery/: __init__.py  __main__.py  cli.py  debug.py  model.py  pipeline.py
src/pdf2epub_recovery/cleaning/: __init__.py  page_artifacts.py
src/pdf2epub_recovery/extraction/: __init__.py  base.py  pymupdf_extractor.py
src/pdf2epub_recovery/profiling/: __init__.py  profiler.py
src/pdf2epub_recovery/reading_order/: __init__.py  resolver.py
src/pdf2epub_recovery/rendering/: __init__.py  css.py  epub.py  xhtml.py
src/pdf2epub_recovery/structure/: __init__.py  paragraphs.py  tables.py  toc.py
src/pdf2epub_recovery/validation/: __init__.py  epubcheck.py
src/pdf2epub_recovery/web/: __init__.py  server.py
tests/: helpers.py  test_cli.py  test_demo_meddicc.py  test_extraction.py  test_model.py  test_page_artifacts.py  test_paragraphs.py  test_pipeline.py  test_profiler.py  test_reading_order.py  test_rendering.py  test_tables.py  test_toc.py  test_web.py
