[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pdf2epub-recovery"
version = "0.1.0"
description = "Local-first PDF-to-EPUB document recovery engine."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Thomas Asen" }
]
keywords = ["pdf", "epub", "ebook", "conversion", "document-processing"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing",
  "Topic :: Utilities"
]
dependencies = [
  "EbookLib>=0.18",
  "PyMuPDF>=1.24"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
pdf2epub-recovery = "pdf2epub_recovery.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2epub_recovery"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
